--- a/src/layout/loading/styles.module.css
+++ b/src/layout/loading/styles.module.css
@@ -42,7 +42,7 @@
 
 .centerImage{
   background-position: center;
-  background-size: fill;
+  background-size: cover;
   background-repeat: no-repeat;
   width: 100vw;
   height: 100vh;
