--- a/src/layout/loading/styles.module.css
+++ b/src/layout/loading/styles.module.css
@@ -53,7 +53,7 @@
     height: 45%;
   }
 
- 
+ /*-------------------------------------------------*/
 
   .loadingBar{
     position: absolute;
@@ -82,5 +82,25 @@
     }
   }
   
+ /*-------------------------------------------------*/
 
+.screeenSaver{
+margin: 0; overflow: hidden; background: #000;
+}
+
+ /*-------------------------------------------------*/
+.powerOnScreen{
+  background-color: #000;
+  width: 100vw;
+  height: 100vh;
+  text-align: center;
+}
+
+.powerOnScreen > button {
+  background-color: #000;
+  color: coral;
+  font-size: 30px;
+  margin-top: 45vh;
+  
+}
 
