--- a/src/layout/loading/styles.module.css
+++ b/src/layout/loading/styles.module.css
@@ -93,14 +93,13 @@ margin: 0; overflow: hidden; background: #000;
   background-color: #000;
   width: 100vw;
   height: 100vh;
-  text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
 .powerOnScreen > button {
   background-color: #000;
   color: coral;
   font-size: 30px;
-  margin-top: 45vh;
-  
 }
 
